--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src//Images/untitled (3).png" />
+    <link rel="icon" href="./logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ideavista - Created to Share your ideas and innovations"
     />
     <meta http-equiv="Cache-Control" content="no-cache" />
 
