--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="keywords"
+      content="ideavista,Ideavista,ideavista.online,Ideavista.online,alternative to instagram,online"
+    />
+    <meta
       name="description"
       content="Ideavista - Created to Share your ideas and innovations"
     />
